# ItemTrackerPGFA

./: .env  docker-compose.yml  dockerfile  pyproject.toml
app/: database.py  main.py  model.py
